objects/State_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IIP_Record_Type__c</fullName>
        <formula>text(Item_Update__r.Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP_Record_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Active_ID__c</fullName>
        <formula>Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item - Active ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_In_Process_ID__c</fullName>
        <formula>Item_Update__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item - In Process ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item - In Process</label>
        <referenceTo>Item_Update__c</referenceTo>
        <relationshipLabel>State Pricing</relationshipLabel>
        <relationshipName>State_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item - Active</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>State Pricing</relationshipLabel>
        <relationshipName>State_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JDE_Reference_ID__c</fullName>
        <description>This the JDE record number for the corresponding State Pricing record, to facilitate data integration.</description>
        <externalId>true</externalId>
        <label>JDE Reference ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_CIF_Total__c</fullName>
        <formula>Item_Update__r.pi_uts_New_CIF_Total__c + State_Adjustment__c + Other_Adjustments__c + X1_Up_Charge_CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New CIF Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Whse_Total__c</fullName>
        <formula>Item_Update__r.pi_uts_New_Whse_Total__c  + State_Adjustment__c + Other_Adjustments__c + X1_Up_Charge_CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Whse Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_CIF_Total__c</fullName>
        <formula>State_Adjustment_Reference__r.CIF_Upcharge__c + State_Adjustment_Reference__r.Base_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old CIF Tot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_State_Adjustment__c</fullName>
        <label>Old State Adj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Whse_Total__c</fullName>
        <formula>State_Adjustment_Reference__r.Whse_Upcharge__c + State_Adjustment_Reference__r.Base_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Whse Tot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Adjustments__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Adj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Adjustment_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Adjustment Reference</label>
        <referenceTo>State_Adjustment_Reference__c</referenceTo>
        <relationshipLabel>State Pricings</relationshipLabel>
        <relationshipName>State_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Adjustment__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>State Adj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trigger Lookup</label>
        <referenceTo>State_Pricing__c</referenceTo>
        <relationshipLabel>State Pricings</relationshipLabel>
        <relationshipName>State_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1_Up_Charge_CIF__c</fullName>
        <label>1% Up Charge - CIF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Up_Charge_WHSE__c</fullName>
        <label>1% Up Charge - WHSE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Up_Charge__c</fullName>
        <label>1% Up Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>State Pricing</label>
    <nameField>
        <displayFormat>SP-{0}</displayFormat>
        <label>State Price No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Pricings</pluralLabel>
    <recordTypes>
        <fullName>Item_Active</fullName>
        <active>true</active>
        <label>Item - Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_In_Process</fullName>
        <active>true</active>
        <label>Item - In Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked</fullName>
        <active>true</active>
        <label>Locked</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>